<resources>

    <string name="app_name">오디오樂</string>
    <string name="msg_exit_app">오디오樂 앱을 종료 하시겠습니까?</string>
    <string name="cancel_exit">앱 계속 사용하기</string>
    <string name="exit_app">앱 종료하기</string>

    <string name="exit">종료</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="ok1">완료</string>
    <string name="ok2">적용</string>
    <string name="save">저장</string>
    <string name="close">닫기</string>
    <string name="show">보기</string>
    <string name="search">검색</string>
    <string name="find">찾기</string>
    <string name="delete">삭제</string>

    <string name="alert">알림</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>

    <string name="msg_processing">처리 중..</string>
    <string name="msg_loading">로딩 중..</string>
    <string name="error_no_server_result">서버에서 응답을 받지 못했습니다. 네트워크 연결 상태를 확인해 주십시오.</string>
    <string name="error_bad_network_state">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>
    <string name="user_agent_string">Contents Portal AudioRac Player</string>

    <string name="action_settings">설정</string>

    <!-- Splash -->
    <string name="msg_new_version">오디오락 새 버전이 있습니다. 원활한 사용을 위하여 업데이트 해주시기 바랍니다.</string>

    <!-- 로그인 -->
    <string name="hint_keyword">도서관명 검색</string>
    <string-array name="OrganizationType">
        <item>대학교</item>
        <item>도서관</item>
    </string-array>
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">성명</string>
    <string name="prompt_password1">아이디</string>
    <string name="prompt_password2">학번(사번)</string>
    <string name="prompt_password3">비밀번호</string>
    <string name="prompt_organ_type">기관종류 선택</string>
    <string name="prompt_organ_school">대학교 선택</string>
    <string name="prompt_organ_library">도서관 선택</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">아이디를 입력하세요.</string>
    <string name="error_invalid_password">성명을 입력하세요.</string>
    <string name="error_invalid_password2">비밀번호를 입력하세요.</string>
    <string name="error_field_required">필수입력입니다.</string>
    <string name="failed_login">로그인을 실패하였습니다.</string>
    <string name="msg_login_network_err">기관명을 불러오지 못했습니다.\n네트워크 상태를 확인 후 재시작 바랍니다.</string>
    <string name="msg_login_confirm_organ">해당 기관명으로 선택하시겠습니까?</string>

    <!-- 권한 요청 -->
    <string name="title_permission">앱 접근권한 안내</string>
    <string name="msg_perm_guide">오디오樂 앱은 다음 권한을 사용합니다.\n서비스의 원할한 이용을 위해 권한을 허용해 주시기 바랍니다.</string>
    <string name="title_sub_permission">▪ 선택적 접근권한</string>
    <string name="msg_perm_storage">저장공간</string>
    <string name="msg_perm_storage_desc">다운로드한 MP3 조회 및 재생을 위한 권한</string>
    <string name="msg_perm_camera">카메라</string>
    <string name="msg_perm_camera_desc">ISBN 바코드 스캔을 위한 권한</string>
    <string name="msg_perm_help1">▪ 접근권한은 해당 기능을 사용할 때 필요하며,</string>
    <string name="msg_perm_help2">권한을 허용하지 않으면 앱 사용이 제한됩니다.</string>
    <string name="msg_perm_help3">▪ 접근권한 설정 확인 방법 : 설정 > 애플리케이션 ></string>
    <string name="msg_perm_help4">오디오樂 > 권한</string>
    <string name="msg_permission_nenied">접근권한을 모두 허용하지 않으면 앱 사용이 제한됩니다.</string>

    <!-- Tab Navigation -->
    <string name="title_home">홈</string>
    <string name="title_down_list">다운</string>
    <string name="title_my_audio">My</string>
    <string name="title_qr">ISBN</string>
    <string name="title_settings">설정</string>

    <!-- 홈 -->
    <string name="msg_home_network_connection">WiFi 내트워크 또는 데이터 네트워크의 설정 상태를 확인하여 주십시오.\n\n네트워크 설정에 문제가 없고, 지속적으로 이 화면이 나타나면 오디오락 관리자에게 문의해 주시기 바랍니다.</string>
    <string name="label_home_goto_download">다운로드 작품 보기</string>
    <string name="label_home_retry_connect">네트워크 연결 재시도</string>

    <!-- 파일 다운로드 -->
    <string name="file_download">파일 다운로드</string>
    <string name="msg_no_download_file">다운로드할 파일이 없습니다.</string>
    <string name="msg_download_proceeding">파일 다운로드 중입니다.</string>
    <string name="msg_download_cancel">파일 다운로드를 취소 하시겠습니까?</string>
    <string name="msg_file_download_cnt">파일 다운로드 중입니다 (%1$d / %2$d)</string>
    <string name="msg_file_download_fail">파일을 다운로드 하지 못했습니다.</string>
    <string name="msg_file_download_complete">%1$d개의 파일 다운로드를 완료 하였습니다.</string>
    <string name="msg_download_network_err">네트워크 상태를 확인해 주십시오.</string>
    <string name="msg_download_duplicate">파일리스트 중 같은 파일명이 이미 존재합니다.\n다운로드를 진행하시겠습니까?</string>

    <!-- Down List -->
    <string name="msg_folder_sample">/Music/CPDRM/</string>

    <string name="ctx_menu_title">선택하세요</string>
    <string name="listen_item">듣기</string>
    <string name="delete_item">삭제</string>

    <string name="open_folder">폴더 열기</string>
    <string name="delete_folder">폴더 삭제</string>
    <string name="delete_file">파일 삭제</string>

    <string name="drm_remain_not_used">최초재생 전</string>
    <string name="drm_remain_no_limit">이용기간 제한없음</string>
    <string name="drm_remain_expired">이용기간 만료</string>
    <string name="drm_remain_folder_1">%1$d개의 파일 중 %2$d개 이용기간 만료</string>
    <string name="drm_remain_folder_2">%1$d개의 파일</string>
    <string name="drm_remain_file_1">약 %1$d일 %2$d시간 남음</string>
    <string name="drm_remain_file_2">약 %1$d시간 %2$d분 남음</string>
    <string name="drm_remain_file_3">약 %1$d분 %2$d초 남음</string>

    <string name="drm_folder_access_denied">접근할 수 없는 폴더입니다.</string>

    <string name="msg_cannot_play_expired">이용기간이 만료되어 재생할 수 없습니다.</string>
    <string name="msg_found_expired_files">이용기간이 만료된 파일이 %1$s개 있습니다.\n지금 삭제 하시겠습니까?</string>
    <string name="msg_delete_folder_files">폴더와 폴더의 파일을 모두 삭제 하시겠습니까?</string>
    <string name="msg_folder_deleted">폴더가 삭제 되었습니다.</string>
    <string name="msg_delete_file">파일을 삭제 하시겠습니까?</string>
    <string name="msg_file_deleted">파일이 삭제 되었습니다.</string>

    <!-- 오디오락 플레이어 -->
    <string name="msg_player_reading_file">파일을 읽고 있습니다.</string>
    <string name="msg_player_invalid_file_format">파일 형식에 문제가 있습니다. %1$s</string>
    <string name="msg_player_expired_license">재생 라이센스가 만료되었습니다.</string>
    <string name="msg_player_check_network">원할한 플레이를 위해 네트워크 상태를 확인해 주세요.</string>
    <string name="label_cduration">현재재생시간</string>
    <string name="label_tduration">총재생시간</string>
    <string name="label_play">Play</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>



    <!-- ISBN -->
    <string name="msg_qr_not_ready">준비중 입니다.</string>
    <string name="msg_qr_book_found">바코드와 일치하는 오디오북을 찾았습니다. 이동하시겠습니까?</string>
    <string name="msg_qr_book_not_found">검색에 실패하였습니다.</string>
    <string name="msg_qr_network_err">네트워크 상태를 확인해 주십시오.\n오프라인에서는 제공하지 않는 기능입니다.</string>
    <string name="msg_qr_invalid_barcode">바코드 스캔한 결과 값을 가져오지 못헀습니다.</string>

    <!-- QR capture -->
    <string name="qr_guide">사각형 영역을 바코드에 맞추면 자동으로 인식합니다</string>
    <string name="msg_invalid_barcode">사용할 수 없는 바코드입니다.</string>
    <string name="title_activity_alarm">AlarmActivity</string>

    <!-- Settings -->
    <string name="sub_title_login_info">로그인정보</string>
    <string name="sub_title_organ_info">기관정보</string>
    <string name="sub_title_theme_mode">앱 화면모드</string>
    <string name="sub_title_bedtime">취침설정</string>
    <string name="sub_title_version_info">버전정보</string>

    <string name="prompt_theme_mode">모드 선택</string>
    <string name="label_light_mode">라이트 모드</string>
    <string name="label_dark_mode">다크 모드</string>

    <string name="msg_settings_bedtime_save">취침설정을 저장하시겠습니까?</string>
    <string name="msg_settings_bedtime_saved">취침시간이 설정되었습니다.</string>
    <string name="msg_settings_logout">로그아웃 하시겠습니까?</string>

    <string name="label_use_bedtime">취침설정을 사용합니다</string>
    <string name="label_select_time">시간선택</string>
    <string name="save_bedtime">설정저장</string>

    <string name="text_current_version">현재버전 %1$s</string>

</resources>
