<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_down_list"
        android:icon="@drawable/ic_tab_down_list"
        android:title="@string/title_down_list" />

    <item
        android:id="@+id/navigation_my_audio"
        android:icon="@drawable/ic_tab_myaudio"
        android:title="@string/title_my_audio" />

    <item
        android:id="@+id/navigation_barcode"
        android:icon="@drawable/ic_tab_barcode"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/title_settings" />
</menu>