<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.conpo.audiorac.fragment.HomeViewFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/navigation_down_list"
        android:name="com.conpo.audiorac.fragment.DownListFragment"
        android:label="@string/title_down_list"
        tools:layout="@layout/fragment_down_list" />

    <fragment
        android:id="@+id/navigation_my_audio"
        android:name="com.conpo.audiorac.fragment.MyAudioFragment"
        android:label="@string/title_my_audio"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/navigation_barcode"
        android:name="com.conpo.audiorac.fragment.BarcodeFragment"
        android:label="@string/title_qr"
        tools:layout="@layout/fragment_barcode" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.conpo.audiorac.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>