<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginWide"
        android:layout_marginTop="@dimen/marginMoreWide"
        android:layout_marginLeft="@dimen/marginXtraWide"
        android:layout_marginRight="@dimen/marginXtraWide"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/marginNormal"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/textLarge"
            android:textStyle="bold"
            android:text="@string/title_permission"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginNormal"
            android:gravity="center"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textMediumSmall"
            android:textStyle="bold"
            android:text="@string/msg_perm_guide"/>
        <LinearLayout style="@style/HorizontalDivider"
            android:layout_marginBottom="@dimen/marginXtraWide"/>

        <TextView
            style="@style/PermItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorNormal"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/title_sub_permission"/>

        <!-- 스토리지 -->
        <LinearLayout
            style="@style/PermItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_perm_media"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginWide"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/colorNormal"
                    android:textSize="@dimen/textMediumSmall"
                    android:textStyle="bold"
                    android:text="@string/msg_perm_storage"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/colorLight"
                    android:textSize="@dimen/textMediumSmall"
                    android:text="@string/msg_perm_storage_desc"/>
            </LinearLayout>
        </LinearLayout>

        <!-- 카메라 -->
        <LinearLayout
            style="@style/PermItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_photo_camera"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginWide"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/colorNormal"
                    android:textSize="@dimen/textMediumSmall"
                    android:textStyle="bold"
                    android:text="@string/msg_perm_camera"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/colorLight"
                    android:textSize="@dimen/textMediumSmall"
                    android:text="@string/msg_perm_camera_desc"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/HorizontalDivider"
            android:layout_marginTop="@dimen/marginXtraWide"/>

        <TextView
            style="@style/PermItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="0dp"
            android:paddingBottom="0dp"
            android:gravity="left"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textMediumSmall"
            android:textStyle="bold"
            android:text="@string/msg_perm_help1"/>
        <TextView
            style="@style/PermItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:gravity="left"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textMediumSmall"
            android:textStyle="bold"
            android:text="@string/msg_perm_help2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:gravity="left"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textMediumSmall"
            android:textStyle="bold"
            android:text="@string/msg_perm_help3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="180dp"
            android:gravity="left"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/textMediumSmall"
            android:textStyle="bold"
            android:text="@string/msg_perm_help4"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginWide"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="#FFF"
        android:textSize="@dimen/textMedium"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btn_blue_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>