<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorHeaderBg"
	android:orientation="vertical"
	tools:context="com.conpo.audiorac.activity.PlayerActivity" >

	<include
		layout="@layout/custom_actionbar"/>

	<!-- 앨범 이미지 및 타이틀 -->
	<LinearLayout
		android:id="@+id/artwork_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="7"
		android:weightSum="10"
		android:gravity="bottom|center_horizontal"
		android:orientation="vertical">

		<!-- 앨범 이미지 -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="8"
			android:padding="@dimen/marginMoreWide"
			android:gravity="bottom|center_horizontal"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:orientation="vertical">
				<ImageView
					android:id="@+id/iv_media_artwork"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="center"
					android:scaleType="fitXY"
					android:src="@drawable/conpo_3226"/>
			</LinearLayout>
		</LinearLayout>

		<!-- 타이틀 -->
		<TextView
			android:id="@+id/txt_media_title"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_margin="@dimen/marginWide"
			android:layout_weight="1.7"
			android:ellipsize="end"
			android:gravity="center"
			android:singleLine="false"
			android:text="오디오락 오디오북 타이틀 샘플 텍스트입니다.MP3"
			android:textColor="@color/colorNormal"
			android:textSize="@dimen/textMediumLarge" />
	</LinearLayout>

	<!-- 배경이미지/재생현황 -->
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="4.7">
		<!-- 배경이미지 -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:weightSum="3"
			android:orientation="vertical">
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:layout_gravity="top"
				android:scaleType="fitXY"
				android:src="@drawable/player_bg1" />
			<ImageView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:layout_gravity="top"
				android:scaleType="fitXY"
				android:src="@drawable/player_bg2" />
		</LinearLayout>

		<!-- 재생현황 -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:weightSum="3"
			android:gravity="bottom"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:layout_marginBottom="20dp"
				android:orientation="vertical">
				<SeekBar
					android:id="@+id/sb_media_progress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:maxHeight="9dp"
					android:minHeight="9dp"
					android:minWidth="200dp"
					android:layout_marginLeft="@dimen/marginWide"
					android:layout_marginRight="@dimen/marginWide"
					android:paddingTop="@dimen/marginNormal"
					android:thumb="@drawable/seekbar_thumb" />
				<LinearLayout
					android:id="@+id/layout1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<!-- 현재재생시간 -->
					<TextView
						android:id="@+id/txt_media_cduration"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/marginWide"
						android:layout_weight="1"
						android:gravity="left"
						android:text="@string/label_cduration"
						android:textColor="@color/colorNormal"
						android:textSize="@dimen/textMediumSmall"
						android:textStyle="bold" />

					<!-- 총재생시간 -->
					<TextView
						android:id="@+id/txt_media_tduration"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/marginWide"
						android:layout_weight="1"
						android:gravity="right"
						android:text="@string/label_tduration"
						android:textColor="@color/colorNormal"
						android:textSize="@dimen/textMediumSmall"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<!-- 플레이어 버튼 -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:weightSum="3"
			android:layout_alignParentBottom="true"
			android:layout_marginLeft="@dimen/marginUltraWide"
			android:layout_marginRight="@dimen/marginUltraWide"
			android:layout_marginBottom="@dimen/marginXtraWide"
			android:orientation="horizontal">
			<ImageButton
				android:id="@+id/btn_file_play"
				android:layout_width="0dp"
				android:layout_height="70dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/marginWide"
				android:scaleType="centerInside"
				android:background="@android:color/transparent"
				android:src="@drawable/xml_btn_play"
				android:contentDescription="@string/label_play"/>
			<ImageButton
				android:id="@+id/btn_file_stop"
				android:layout_width="0dp"
				android:layout_height="70dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/marginWide"
				android:scaleType="centerInside"
				android:background="@android:color/transparent"
				android:src="@drawable/xml_btn_stop"
				android:contentDescription="@string/label_stop"/>
			<ImageButton
				android:id="@+id/btn_file_pause"
				android:layout_width="0dp"
				android:layout_height="70dp"
				android:layout_weight="1"
				android:layout_margin="@dimen/marginWide"
				android:scaleType="centerInside"
				android:background="@android:color/transparent"
				android:src="@drawable/xml_btn_pause"
				android:contentDescription="@string/label_pause"/>
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>