<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout
        android:id="@+id/web_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="#FFF"
        android:visibility="visible">
      
        <com.conpo.audiorac.widget.webview.ObservableWebView 
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"/>

        <ProgressBar android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ImageButton
            android:id="@+id/btn_go_back"
            android:layout_width="@dimen/heightHigh"
            android:layout_height="@dimen/heightHigh"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="55dp"
            android:layout_marginLeft="10dp"
            android:alpha="0.7"
            android:background="@drawable/ic_back"
            android:elevation="@dimen/marginNormal" />

        <Button
            android:id="@+id/btn_gototop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="55dip"
            android:layout_marginRight="10dip"
            android:text="TOP"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- 네트워크 에러 -->
    <LinearLayout
        android:id="@+id/err_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/marginUltraWide"
        android:visibility="gone"
        android:background="#FFF"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin2XtraWide"
            android:textSize="@dimen/textMediumSmall"
            android:text="@string/msg_home_network_connection" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_wifi_off"
            app:tint="@color/colorLight" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin2XtraWide"
            android:textSize="@dimen/textMediumSmall"
            android:text="No Connection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10"
            android:layout_marginTop="@dimen/marginMoreWide"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_goto_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                android:text="@string/label_home_goto_download"
                android:background="@drawable/btn_blue_bg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10"
            android:layout_marginTop="@dimen/marginNormal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_retry_connect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_home_retry_connect"
                android:background="@drawable/btn_blue1_bg"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
